# sense-cli

./: .gitignore  Cargo.toml  README.md  avs_demo.wasm  deploy.sh  test.sh
src/: cmd_create_nucleus.rs  cmd_deploy.rs  cmd_query_balance.rs  deploy_cmd.rs  main.rs  subxt.rs
