[package]
name = "sense-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sc-cli = { version = "0.46.0", default-features = true }

subxt = "0.37.0"
subxt-signer = "0.37.0"

tokio = { version = "1.39.3", features = ["full"] }

sha2 = "0.10.6"
hex = "0.4.3"
blake2 = "0.10.6"
bs58 = "0.5.1"

